# ai-ticketing-assistant

./: README.md  environment.yml  pyproject.toml
dataset/splits/: test.csv  train.csv  val.csv
demo/: rag_app.py
eval/: evaluate_classifiers.py  evaluate_clf_prio.py  evaluate_generators.py  evaluate_rootage.py  llm_as_a_judge.py
notebooks/: fine-tuning.ipynb  priority_classification.ipynb  rag.ipynb  similar_tickets.ipynb
results/: priority.csv  support_team.csv
scripts/tests/: test_llm_classifier.py  test_plotter.py  test_processor.py  test_rag.py  test_top_k_recommender.py
scripts/train/: create_rag.py  train_lightgbm_best_params.py  train_top_k_recommender.py
src/data/: data_loader.py  data_processor.py
src/models/: __init__.py  base_model.py
src/models/baseline/: lightgbm_classifier.py  optimize_lightgbm.py  top_k_recommender.py
src/models/llm_classifier/: __init__.py  llm_finetuner.py  llm_inference.py
src/models/rag/: __init__.py  rag_model.py  simple_generator.py
src/visualization/: plotter.py
