[project]
name = "ai-ticketing-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Apolline Wasik"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mistralai (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
