[tool.poetry]
name = "ai-ticketing-assistant"
version = "0.1.0"
description = "AI Ticket Assistant"
authors = ["Apolline Wasik"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"

mistralai = ">=1.9.1,<2.0.0"
ipykernel = ">=6.29.5,<7.0.0"
jupyter = ">=1.1.1,<2.0.0"
jupyterlab = ">=4.4.4,<5.0.0"
jupyter-server = ">=2.16.0,<3.0.0"
notebook = ">=7.4.4,<8.0.0"
kagglehub = ">=0.3.12,<0.4.0"
kaggle = ">=1.7.4.5,<2.0.0.0"
pandas = ">=2.3.0,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
scikit-learn = ">=1.7.0,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
transformers = ">=4.53.1,<5.0.0"
torch = ">=2.7.1,<3.0.0"
sentence-transformers = ">=5.0.0,<6.0.0"
lightgbm = ">=4.6.0,<5.0.0"
optuna = ">=4.4.0,<5.0.0"
numpy = "==2.1.0"
tqdm = ">=4.67.1,<5.0.0"
keras = ">=3.10.0,<4.0.0"
tensorflow = ">=2.19.0,<3.0.0"
wandb = ">=0.21.0,<0.22.0"
tf-keras = "^2.19.0"
streamlit = "^1.46.1"
faiss-cpu = "^1.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"